--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 
 User-Visible Changes in python-spake2
 
+* Upcoming Release
+
+python-spake2 now depends on the "cryptography" library instead of
+"hkdf" for key-derivation.
+
 * Release 0.8 (14-Feb-2018)
 
 API BREAK (but not a compatibility break)
