--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ User-Visible Changes in python-spake2
 python-spake2 now depends on the "cryptography" library instead of
 "hkdf" for key-derivation.
 
+There is no longer a vendored version of "six" (nor use of it, thanks a-dieste).
+
 * Release 0.8 (14-Feb-2018)
 
 API BREAK (but not a compatibility break)
